--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -4,7 +4,7 @@ li {
   ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 8px;
     overflow: hidden;
     background-color: brown;
   }
