--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,9 @@
         flex-direction: row;
         height: 100%;
         .nav-list {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
           list-style: none;
           background-color: transparent;
           li {
@@ -59,40 +62,71 @@
   margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40px;
-  pointer-events: none;
+.home {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  .container {
+    .inventory-list {
+      list-style: none;
+      background-color: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding: 0;
+      margin: 0;
+      li {
+        width: 50%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        margin-bottom: 24px;
 
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
+        .card {
+          max-width: 200px;
+          display: flex;
+          align-items: flex-start;
+          justify-content: flex-start;
+          flex-direction: column;
+          border: 2px solid grey;
+          border-radius: 12px;
+          height: 250px;
+          padding: 12px;
+          img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+          }
+          .title {
+            height: 25px;
+            font-size: 24px;
+            font-weight: bold;
+          }
+          .price {
+            height: 25px;
+          }
+          .button {
+            width: 100%;
+            .add-cart {
+              border: 2px solid red;
+              background-color: red;
+              color: white;
+              outline: 0;
+              height: 45px;
+              width: 100%;
+              font-size: 16px;
+              text-align: center;
+              cursor: pointer;
+              transition: all 0.3s ease-in-out;
+              &:hover {
+                background-color: white;
+                color: red;
+              }
+            }
+          }
+        }
+      }
     }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-  &:hover {
-    color: black;
   }
 }
