--- a/src/App.scss
+++ b/src/App.scss
@@ -52,8 +52,9 @@
   }
 
   .logo-nav {
-    height: 40px;
-    width: 60px;
+    height: 100px;
+    width: 150px;
+    padding-bottom: 20px;
   }
 }
 
