--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,27 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    .right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      flex-direction: row;
+      height: 100%;
+      .nav-list {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        list-style: none;
+        background-color: transparent;
+        li {
+          padding: 0 10px;
+          a {
+            text-decoration: none;
+            font-size: 24px;
+          }
+        }
+      }
+    }
     .left {
       width: 50%;
       height: 100%;
