--- a/src/components/CardStyles.scss
+++ b/src/components/CardStyles.scss
@@ -2,7 +2,7 @@
     width: 300px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
 .card-container:hover{
@@ -22,4 +22,25 @@
 .image-container{
     overflow: hidden;
     height: 200px;
+    object-fit: contain;
+}
+
+.card-btn{
+    display: flex;
+    justify-content: center;
+
+    button{
+        padding: 0.5rem;
+        background-color: white;
+        border: none;
+        transition: 0.2s;
+        margin-bottom: 0.5rem;
+    }
+    :hover{
+        background: rgba(27,156,252,0.1);
+    }
+    a{
+        text-transform: uppercase;
+        color:red;
+    }
 }
