search bar and filter added

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,6 +71,7 @@
       height: 100%;
     }
   }
+ 
 
   .logo-nav {
     height: 100px;
@@ -82,6 +83,10 @@
 .section {
   padding: 0 20px;
   margin-bottom: 20px;
+}
+.sideSearchBar{
+  margin-right: 511px;
+
 }
 
 .home {
@@ -100,6 +105,7 @@
       margin: 0;
       width: 100%; 
       max-width: 960px;
+      padding-top: 25px;
       li {
         flex-basis: 33.33%;
         max-width: 33.33%;
@@ -114,7 +120,7 @@
           flex-direction: column;
           border: 2px solid grey;
           border-radius: 12px;
-          height: 250px;
+          height: 270px; //look at this to fix the format
           padding: 12px;
           img {
             width: 100%;
@@ -123,11 +129,12 @@
           }
           .title {
             height: 25px;
-            font-size: 24px;
+            font-size: 15px;
             font-weight: bold;
           }
           .price {
             height: 25px;
+            padding-top: 15px;
           }
           .button {
             width: 100%;
@@ -146,6 +153,7 @@
                 background-color: white;
                 color: red;
               }
+              
             }
           }
         }
