--- a/src/App.scss
+++ b/src/App.scss
@@ -88,8 +88,38 @@
   margin-right: 512px;
 
 }
-.filter-select{
-  background-color: yellow;
+.filter-select {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.filter-select input[type="radio"] {
+  margin-right: 8px;
+  -webkit-appearance: none;
+  border-radius: 50%;
+  border: 3px solid #ccc;
+  display: inline-flex;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.filter-select input[type="radio"]:checked {
+  border-color: red;
+}
+
+.filter-select label {
+  display: inline-flex;
+  margin-left: -500px;
+  cursor: pointer;
+}
+
+
+.filter-bar{
+  margin-left: -50px;
+  margin-bottom: -170px;
+}
+.filter-select {
+  margin-top: 50px;
 }
 
 .home {
