--- a/src/App.scss
+++ b/src/App.scss
@@ -180,6 +180,7 @@
               width: 100%;
               font-size: 16px;
               text-align: center;
+              border-radius: 6px;
               cursor: pointer;
               transition: all 0.3s ease-in-out;
               &:hover {
