--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,8 @@
 }
 .search-bar{
   margin-right: 512px;
+  border-radius: 6px;
+  border-color: red;
 
 }
 .filter-select {
@@ -121,7 +123,14 @@
 .filter-select {
   margin-top: 50px;
 }
-
+.card:hover{
+  
+    transform: scale(1.05);
+    box-shadow: 0px 0px 15px 0px;
+    transition: 0.2s;
+  
+  
+}
 .home {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -151,10 +160,13 @@
           align-items: flex-start;
           justify-content: flex-start;
           flex-direction: column;
-          border: 2px solid grey;
+          border: 2px solid red;
           border-radius: 12px;
           height: 270px; 
           padding: 12px;
+     
+          
+          
           img {
             width: 100%;
             height: 150px;
