--- a/src/pages/HomePageStyles.scss
+++ b/src/pages/HomePageStyles.scss
@@ -9,7 +9,8 @@
             height : 500px;
             object-fit:cover;
             width: 1100px;
-        }
+            border-radius: 5px
+              }
     
     
 }
@@ -32,9 +33,8 @@
   .box {
     height: 400px;
     width: 300px;
-    background-color: blanchedalmond;
- 
     padding: 8px;
+    border-radius: 5px;
     margin: auto;
   }
   
