--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 .nav {
   width: 100%;
   height: 84px;
-  background-color: yellow;
+  background-color: #fdd201;
 
   .container {
     max-width: 1200px;
