--- a/src/pages/HomePageStyles.scss
+++ b/src/pages/HomePageStyles.scss
@@ -37,4 +37,8 @@
     border-radius: 5px;
     margin: auto;
   }
-  
+  .contents{
+    border: 2px solid #1C6EA4;
+    padding: 5px;
+   gap: 1em;
+  }
