--- a/src/App.scss
+++ b/src/App.scss
@@ -127,11 +127,10 @@
 .card:hover{
   
     transform: scale(1.05);
-    box-shadow: 0px 0px 15px 0px;
+    box-shadow: 0px 0px 15px 0px; //color
     transition: 0.2s;
-  
-  
 }
+
 .home {
   padding-top: 20px;
   padding-bottom: 20px;
