--- a/src/App.scss
+++ b/src/App.scss
@@ -72,7 +72,6 @@
     }
   }
  
-
   .logo-nav {
     height: 100px;
     width: 150px;
@@ -84,13 +83,14 @@
   padding: 0 20px;
   margin-bottom: 20px;
 }
+//input tag from event.scss is overriding
 .search-bar{
   margin-right: 512px;
   border-radius: 10px;
   border-color: red;
 
-
 }
+//what does this do?
 .filter-select {
   display: flex;
   flex-direction: column;
@@ -116,22 +116,30 @@
   cursor: pointer;
 }
 
-
-
-.filter-select {
-  margin-top: 50px;
-}
 .card:hover{
-  
     transform: scale(1.05);
     box-shadow: 0px 0px 15px 0px; //color
     transition: 0.2s;
+}
+.filter-bar{
+  border: 2px solid #1C6EA4;
+  width: 300px;
+  padding: 1rem;
+  margin-left: -20%;
+  position: relative;
+  top: 40px;
+  input{
+    
+    display: inline;
+  }
 }
 
 .home {
   padding-top: 20px;
   padding-bottom: 20px;
+
   .container {
+
     .inventory-list {
       list-style: none;
       background-color: transparent;
@@ -140,11 +148,12 @@
       justify-content: flex-start;
       flex-direction: row;
       flex-wrap: wrap;
-      padding-left: 140px ;
-      margin: 0;
+      padding-left: 140px;
+      margin-top: -20%;
       width: 100%; 
       max-width: 960px;
       padding-top: 25px;
+
       li {
         flex-basis: 33.33%;
         max-width: 33.33%;
@@ -167,20 +176,21 @@
             height: 150px;
             object-fit: cover;
           }
+
           .title {
             height: 25px;
             font-size: 15px;
             font-weight: bold;
-          }
-         
-          
+          } 
         }
       }
     }
   }
 }
+
 .button {
   width: 100%;
+
   .add-cart {
     border: 2px solid red;
     background-color: red;
@@ -193,6 +203,7 @@
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    //button hover
     &:hover {
       background-color: white;
       color: red;
