added css to adminlogin.js

--- a/src/pages/login.scss
+++ b/src/pages/login.scss
@@ -13,7 +13,12 @@
       font-weight: 500;
       color: red;
     }
-  
+    h6{
+      color:aqua;
+      font-size: 15px;
+       text-align: center;
+    margin-top: 20px;
+    }
     .login-input {
       width: 368px;
       padding: 10px 15px;
