--- a/src/pages/Viewcart.css
+++ b/src/pages/Viewcart.css
@@ -14,7 +14,7 @@
   position: absolute;
   top: 29px;
   left: 450px;
-  font-family: 'Inter', sans-serif;
+  /* font-family: 'Inter', sans-serif; */
   font-weight: normal;
   font-size: 30px;
   text-align: center;
@@ -23,11 +23,11 @@
   height: 1034px;
   position: relative;
   margin-top: -150px;
-  margin-left: -55px; 
+  margin-left: -55px;
 }
 .Product {
   width: 119px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 296px;
   left: 82px;
@@ -38,7 +38,7 @@
 }
 .Price {
   width: 77px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 296px;
   left: 562px;
@@ -49,7 +49,7 @@
 }
 .Quantity {
   width: 129px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 296px;
   left: 755px;
@@ -61,7 +61,7 @@
 .Underline {
   width: 862px;
   height: 10px;
-  background: rgba(217,217,217,1);
+  background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
   top: 351px;
@@ -72,7 +72,7 @@
 .Product-1 {
   width: 170px;
   height: 154px;
-  background: rgba(217,217,217,1);
+  background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
   top: 423px;
@@ -82,7 +82,7 @@
 .Product-2 {
   width: 170px;
   height: 154px;
-  background: rgba(217,217,217,1);
+  background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
   top: 639px;
@@ -92,7 +92,7 @@
 .Product-3 {
   width: 170px;
   height: 154px;
-  background: rgba(217,217,217,1);
+  background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
   top: 855px;
@@ -101,7 +101,7 @@
 }
 .Product-description-1 {
   width: 217px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 500px;
   left: 270px;
@@ -112,7 +112,7 @@
 }
 .Product-description-2 {
   width: 217px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 716px;
   left: 270px;
@@ -122,7 +122,7 @@
   text-align: left;
 }
 .Product-description-3 {
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 932px;
   left: 270px;
@@ -133,7 +133,7 @@
 }
 .Price-1 {
   width: 39px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 481px;
   left: 606px;
@@ -144,7 +144,7 @@
 }
 .Price-2 {
   width: 39px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 697px;
   left: 606px;
@@ -155,7 +155,7 @@
 }
 .Price-3 {
   width: 39px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 908px;
   left: 606px;
@@ -165,47 +165,38 @@
   text-align: left;
 }
 
-
 .Quantity-1 {
-
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 483px;
   left: 790px;
-
- 
 }
 .Quantity-2 {
-
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 697px;
   left: 790px;
-
 }
 .Quantity-3 {
- 
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 908px;
   left: 790px;
-  
 }
-
 
 .Container-3 {
   width: 300px;
   height: 600px;
-  background: rgba(217,217,217,1);
+  background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
-  top: 370px; 
+  top: 370px;
   left: 980px;
   overflow: hidden;
 }
 .Summary {
   width: 143px;
-  color: rgba(0,0,0,1);
+  color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 380px;
   left: 1075px;
@@ -215,8 +206,7 @@
   opacity: 1;
 }
 
-
-.Checkout{
+.Checkout {
   width: 143px;
   background: #9e3c3c;
   position: absolute;
@@ -238,7 +228,7 @@ ul {
   list-style-type: none;
 }
 
-.QuantityInputBox{
+.QuantityInputBox {
   display: inline-block;
   border: 1px solid #ddd;
   width: 40px;
@@ -246,34 +236,30 @@ ul {
   text-align: center;
   padding-top: 2px;
   vertical-align: middle;
-  background: #eee
+  background: #eee;
 }
 
-.QuantityButtons{
-    display: inline-block;
-    border: 1px solid #ddd;
-    margin: 0px;
-    width: 40px;
-    height: 20px;
-    text-align: center;
-    vertical-align: middle;
-    padding: 11px 0;
-    background: #eee;
-    
-  
-  
+.QuantityButtons {
+  display: inline-block;
+  border: 1px solid #ddd;
+  margin: 0px;
+  width: 40px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
 }
 
 td {
   display: inline-block;
-   padding-right: 180px;
-   padding-top: 180px;
-   height: 10px;
+  padding-right: 180px;
+  padding-top: 180px;
+  height: 10px;
 }
 
 .pic {
   width: 50px; /* adjust to fit your image size */
-  
 }
 
 .name {
@@ -282,21 +268,20 @@ td {
 
 .price {
   width: 100px; /* adjust to fit your text size */
-  padding-left: 150px ;
+  padding-left: 150px;
 }
-
 
 .quantity {
   width: 300px; /* adjust to fit your text size */
-  padding-left: 20px ;
+  padding-left: 20px;
 }
 
-img{
+img {
   width: 60px;
   height: 60px;
 }
 
-.remove-button{
+.remove-button {
   margin-left: 50px;
   margin-top: -70px;
   display: inline-block;
@@ -306,8 +291,4 @@ img{
   display: inline-block;
   border-radius: 8px;
   background-color: yellow;
-
-  
-  
 }
-
