--- a/src/App.scss
+++ b/src/App.scss
@@ -122,7 +122,7 @@
     transition: 0.2s;
 }
 .filter-bar{
-  border: 2px solid #1C6EA4;
+  border: 2px solid red;
   width: 300px;
   padding: 1rem;
   margin-left: -20%;
@@ -148,10 +148,11 @@
       justify-content: flex-start;
       flex-direction: row;
       flex-wrap: wrap;
+      //gap: 0.5rem;
       padding-left: 140px;
       margin-top: -20%;
       width: 100%; 
-      max-width: 960px;
+      max-width: 1100px;
       padding-top: 25px;
 
       li {
@@ -166,15 +167,16 @@
           align-items: flex-start;
           justify-content: flex-start;
           flex-direction: column;
-          border: 2px solid red;
+          border: 3px solid red;
           border-radius: 12px;
           height: 350px; 
-          padding: 12px;
+          padding: 1rem;
+          object-fit: contain;
      
           img {
-            width: 120%;
+            width: 100%;
             height: 150px;
-            object-fit: cover;
+           
           }
 
           .title {
