--- a/src/pages/Viewcart.css
+++ b/src/pages/Viewcart.css
@@ -28,7 +28,7 @@
 .Product {
   width: 119px;
   color: rgba(0, 0, 0, 1);
-  position: absolute;
+
   top: 296px;
   left: 82px;
   font-family: Inter;
@@ -36,10 +36,10 @@
   font-size: 32px;
   text-align: left;
 }
-.Price {
+
+.cart-Price {
   width: 77px;
   color: rgba(0, 0, 0, 1);
-  position: absolute;
   top: 296px;
   left: 562px;
   font-family: Inter;
@@ -47,10 +47,11 @@
   font-size: 32px;
   text-align: left;
 }
+
 .Quantity {
   width: 129px;
   color: rgba(0, 0, 0, 1);
-  position: absolute;
+  
   top: 296px;
   left: 755px;
   font-family: Inter;
@@ -61,9 +62,9 @@
 .Underline {
   width: 862px;
   height: 10px;
-  background: rgba(217, 217, 217, 1);
+  background: rgb(19, 6, 6);
   opacity: 1;
-  position: absolute;
+
   top: 351px;
   left: 55px;
   overflow: hidden;
@@ -130,7 +131,7 @@
   font-weight: Regular;
   font-size: 20px;
   text-align: left;
-}
+} 
 .Price-1 {
   width: 39px;
   color: rgba(0, 0, 0, 1);
@@ -163,7 +164,7 @@
   font-weight: Regular;
   font-size: 20px;
   text-align: left;
-}
+} */
 
 .Quantity-1 {
   color: rgba(0, 0, 0, 1);
@@ -185,13 +186,14 @@
 }
 
 .Container-3 {
-  width: 300px;
+  width: 320px;
   height: 600px;
   background: rgba(217, 217, 217, 1);
   opacity: 1;
   position: absolute;
-  top: 370px;
-  left: 980px;
+  text-align: center;
+  top: 70px;
+  left: 1100px;
   overflow: hidden;
 }
 .Summary {
@@ -199,7 +201,7 @@
   color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 380px;
-  left: 1075px;
+  left: 1100px;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
@@ -256,6 +258,11 @@ td {
   padding-right: 180px;
   padding-top: 180px;
   height: 10px;
+}
+table{
+  position: relative;
+  right:100px;
+
 }
 
 .pic {
