--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,7 @@
       height: 100%;
     }
   }
- 
+
   .logo-nav {
     height: 100px;
     width: 150px;
@@ -84,11 +84,10 @@
   margin-bottom: 20px;
 }
 //input tag from event.scss is overriding
-.search-bar{
+.search-bar {
   margin-right: 512px;
   border-radius: 10px;
   border-color: red;
-
 }
 //what does this do?
 .filter-select {
@@ -116,20 +115,19 @@
   cursor: pointer;
 }
 
-.card:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 0px 15px 0px; //color
-    transition: 0.2s;
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 15px 0px; //color
+  transition: 0.2s;
 }
-.filter-bar{
+.filter-bar {
   border: 2px solid red;
   width: 300px;
   padding: 1rem;
   margin-left: -20%;
   position: relative;
   top: 40px;
-  input{
-    
+  input {
     display: inline;
   }
 }
@@ -139,7 +137,6 @@
   padding-bottom: 20px;
 
   .container {
-
     .inventory-list {
       list-style: none;
       background-color: transparent;
@@ -151,15 +148,15 @@
       //gap: 0.5rem;
       padding-left: 140px;
       margin-top: -20%;
-      width: 100%; 
+      width: 100%;
       max-width: 1100px;
       padding-top: 25px;
 
       li {
         flex-basis: 33.33%;
         max-width: 33.33%;
-        box-sizing: border-box; 
-        padding: 10px; 
+        box-sizing: border-box;
+        padding: 10px;
 
         .card {
           max-width: 250px;
@@ -169,23 +166,42 @@
           flex-direction: column;
           border: 3px solid red;
           border-radius: 12px;
-          height: 350px; 
+          height: 350px;
           padding: 1rem;
           object-fit: contain;
-     
+
           img {
             width: 100%;
             height: 150px;
-           
           }
 
           .title {
             height: 25px;
             font-size: 15px;
             font-weight: bold;
-          } 
+          }
         }
       }
+    }
+  }
+}
+
+.Footer {
+  position: fixed bottom;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5e505;
+  color: #000;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.3);
+  .footer a {
+    color: black;
+    text-decoration: none;
+    margin-right: 10px;
+    .footer a:hover {
+      color: white;
     }
   }
 }
@@ -210,6 +226,5 @@
       background-color: white;
       color: red;
     }
-    
   }
 }
