99% cartpage css, edited footer in app.css

--- a/src/App.scss
+++ b/src/App.scss
@@ -187,9 +187,9 @@
 }
 
 .Footer {
-  position: fixed bottom;
-  bottom: 0;
+  position: fixed;
   left: 0;
+  bottom: 0;
   width: 100%;
   background-color: #f5e505;
   color: #000;
