--- a/src/pages/Productviewpg.scss
+++ b/src/pages/Productviewpg.scss
@@ -54,7 +54,7 @@
     color: white;
     outline: 0;
     height: 45px;
-    width: 10%;
+    width: 50%;
     font-size: 16px;
     text-align: center;
     cursor: pointer;
@@ -63,5 +63,11 @@
       background-color: white;
       color: red;
 }
+}
+.test{
+
+  padding-left: 820px;
+  padding-top: 500px;
+ 
 }
 
