--- a/src/pages/HomePageStyles.scss
+++ b/src/pages/HomePageStyles.scss
@@ -1,49 +1,54 @@
-.main-image-container {
-
-    padding: 3rem;
-    width: 1250px;
-    height: 600px;
-    display: inline-block;
-
-        .main-image{
-            height : 500px;
-            object-fit:cover;
-            width: 1100px;
-            border-radius: 5px
-              }
-    
-    
+.carousel {
+  width: 1000px;
 }
-.grid-4-columns{
-    margin: auto;
-    width: min(90%, 75rem);
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 4em;
-    padding: 2.5rem;
-  }
-  
-  /* this is for allowing a box to fill 
-  2 spaces horizontally*/
-  .grid-col-span-2 {
-    grid-column: span 2;
-  }
-  
-  /* card for storing products*/
-  .box {
-    height: 400px;
-    width: 300px;
-    padding: 8px;
-    border-radius: 5px;
-    margin: auto;
-  }
-  .contents{
-    border: 2px solid #1C6EA4;
-    padding: 5px;
-   gap: 1em;
-  }
 
-  #card-img{
-    height: 200px;
-    width: 300px;
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 24px;
+}
+
+.main-image-container {
+  padding: 4rem;
+  height: 600px;
+  width: 100%;
+
+  .main-image {
+    height: 500px;
+    object-fit: cover;
+    border-radius: 5px;
+    width: 100%;
   }
+}
+.grid-4-columns {
+  margin: auto;
+  width: min(90%, 75rem);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4em;
+  padding: 2.5rem;
+}
+
+/* this is for allowing a box to fill 
+  2 spaces horizontally*/
+.grid-col-span-2 {
+  grid-column: span 2;
+}
+
+/* card for storing products*/
+.box {
+  height: 400px;
+  width: 300px;
+  padding: 8px;
+  border-radius: 5px;
+  margin: auto;
+}
+.contents {
+  border: 2px solid #1c6ea4;
+  padding: 5px;
+  gap: 1em;
+}
+
+#card-img {
+  height: 200px;
+  width: 300px;
+}
