fixed some homepage css bug

--- a/src/styles/HomePageStyles.scss
+++ b/src/styles/HomePageStyles.scss
@@ -1,5 +1,6 @@
 .carousel {
   width: 1000px;
+  left: 17.5em;
 }
 
 .carousel-caption {
@@ -42,11 +43,7 @@
   border-radius: 5px;
   margin: auto;
 }
-.contents {
-  border: 2px solid #1c6ea4;
-  padding: 5px;
-  gap: 1em;
-}
+
 
 #card-img {
   height: 200px;
