--- a/src/App.scss
+++ b/src/App.scss
@@ -306,7 +306,7 @@ body {
           align-items: flex-start;
           justify-content: flex-start;
           flex-direction: column;
-          border: 3px solid red;
+          border: 3px solid #006149;
           background-color: white;
           border-radius: 12px;
           height: 350px;
@@ -361,8 +361,8 @@ body {
   width: 100%;
 
   .add-cart {
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid #006149;
+    background-color: #006149;
     color: white;
     outline: 0;
     height: 40px;
