--- a/src/styles/CheckoutStyles.scss
+++ b/src/styles/CheckoutStyles.scss
@@ -24,7 +24,8 @@
     }
 }
 
-.summary-container {
+.checkout-summary-container {
+    overflow: auto;
     position: relative;
     width: 450px;
     height: 700px;
@@ -41,7 +42,20 @@
         padding-left: 1.5em;
     }
 
-    .summary-list {}
+    .summary-list {
+        padding-left: 1em;
+        padding-top: 1em;
+    }
+
+}
+.summary-total-price{
+    position: absolute;
+    bottom: 0;
+    height: 3em;
+    width: 100%;
+    text-align: center;
+    color: aliceblue;
+    background-color: #006149;
 }
 
 .checkout-button {
