--- a/src/styles/admin-nav.scss
+++ b/src/styles/admin-nav.scss
@@ -1,82 +1,99 @@
 .admin__header {
-  width: 100px;
-  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 64px;
   background-color: var(--primary-color);
 }
-.admin__nav-top {
-  width: 100%;
-}
 
-.admin__nav-wrapper-top {
+.admin__nav-top {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: 3rem;
+  padding: 0 24px;
+  height: 100%;
+  width: 100%;
 }
 
-.admin__nav-top-right img {
-  width: 40px;
+.admin__nav-top-left {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  border-radius: 50px;
-  flex-direction: row;
+  gap: 16px;
+}
+
+.admin__nav-top-left img {
+  width: 40px;
   height: 40px;
+  border-radius: 50%;
+}
+
+.admin__nav-top-left h2 {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 0;
 }
 
 .admin__nav-top-right {
   display: flex;
   align-items: center;
-  column-gap: 2rem;
-}
-
-.admin__nav-wrapper-top .search__box {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  gap: 16px;
 }
 
 .admin__nav-top-right span i {
-  color: whitesmoke;
+  color: #fff;
   cursor: pointer;
 }
 
-.admin__nav-wrapper-top .logo h2 {
-  font-size: 1.2rem;
-  color: whitesmoke;
+.admin__nav-top-right img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 .admin__menu {
-  width: 100%;
-  height: 70px;
-  line-height: 70px;
-  background: var(--card-bg-02);
+  height: 64px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .admin__navigation {
-  text-align: center;
+  display: flex;
   align-items: center;
-  justify-content: space-between;
-  column-gap: 3rem;
+  justify-content: center;
+  height: 100%;
 }
 
 .admin__menu-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: 2.7rem;
+  gap: 24px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.admin__menu-list .admin__menu-item a {
-  color: var(--primary-color);
+.admin__menu-list li {
+  margin: 0;
+}
+
+.admin__menu-list a {
+  color: #000;
+  text-decoration: none;
+  font-size: 1rem;
   font-weight: 500;
-  padding: 10px 15px;
+  padding: 16px 24px;
   border-radius: 5px;
 }
 
-.active__admin-menu {
-  background-color: whitesmoke;
+.admin__menu-list a:hover {
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 .active__admin-menu {
+  background-color: var(--primary-color);
+  color: #fff;
 }
