--- a/src/styles/Productviewpg.scss
+++ b/src/styles/Productviewpg.scss
@@ -1,60 +1,73 @@
 .frame-child{
   position: absolute;
   top: 138px;
-  left: 77px;
+  left: 330px;
   width: 561px;
   height: 394px;
 }
 
 .image-1-icon, .image-2-icon, .image-3-icon, .image-4-icon {
   object-fit: cover;
-  width: 112px;
+  transform: rotate(45eg);
   height: 103px;
+  left: 500px;
+  background-color: aqua;
 }
 
 .image-icons-container{
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 580px;
-  left: 77px;
-  width: 561px;
+  top: 280px;
+  left: 1px;
+   width: 200px;
   height: 103px;
+  transform: rotate(90deg);
+  
 }
 
   .product-title {
     position: absolute;
     top: 185px;
-    left: 745px;
+    left: 1000px;
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Glegoo', serif;
+    font-size: 35px;
+    font-weight: 800;
   }
 
   .price{
     position: absolute;
-    top: 230px;
-    left: 745px;
-
-  }
-
-  .store-location-nw{
-    position: absolute;
     top: 280px;
-    left: 743px;
-    font-size: var(--font-size-xl);
+    left: 1000px;
+    font-weight: 700;
+    font-size: 30px;
+
+
   }
 
-  .Description {
+  .available{
     position: absolute;
-    left: 743px;
-    top: 370px;
+    top: 325px;
+    left: 1000px;
+    font-size: var(--font-size-xl);
+    color: #1cb93e;
+  }
+
+  .warning {
+    position: absolute;
+    left: 1000px;
+    top: 400px;
+    width: 300px;
   }
   
   .AddTocart {
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid rgb(245, 109, 19);
+    background-color: rgb(245, 109, 19);
     color: white;
     outline: 0;
-    height: 45px;
-    width: 40%;
+    height: 70px;
+    width: 100%;
     font-size: 16px;
     text-align: center;
     cursor: pointer;
@@ -65,8 +78,8 @@
 }
 }
 .SubmitButton-div{
-  padding-left: 900px;
-  padding-top: 487px;
+  padding-left: 760px;
+  padding-top: 387px;
  
 }
 .RemoveButton-div{
@@ -87,3 +100,6 @@
   
  
 }
+
+
+
