--- a/src/styles/OrderConStyles.scss
+++ b/src/styles/OrderConStyles.scss
@@ -12,6 +12,9 @@
 
 .order-contents{
     position: relative;
-    top: 8em;
+    top: 8em; 
    
+}
+.Continue_Shopping_Div{
+    padding-top: 240px;
 }
