--- a/src/styles/Viewcart.scss
+++ b/src/styles/Viewcart.scss
@@ -18,7 +18,7 @@
     .cart-container {
       background-color: white;
       max-width: 70em;
-
+      margin-bottom: 5em;
       .list-group {
         .list-group-item {
           .list-group-row {
