--- a/src/styles/admin-nav.scss
+++ b/src/styles/admin-nav.scss
@@ -1,3 +1,4 @@
+
 .admin__header {
   display: flex;
   align-items: center;
@@ -56,6 +57,7 @@
   height: 64px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 2em;
 }
 
 .admin__navigation {
