--- a/src/styles/admin-nav.scss
+++ b/src/styles/admin-nav.scss
@@ -55,7 +55,7 @@
 
 .admin__menu {
   height: 64px;
-  background-color: #fff;
+  background-color: #f8f8f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 2em;
 }
