--- a/src/App.scss
+++ b/src/App.scss
@@ -323,10 +323,31 @@ body {
             justify-content: center;
             width: 100%;
             margin-bottom: 12px;
+            opacity: 1;
+            display: block;
+           
+       
+    
+            .Show_Details {
+              background-color: #04AA6D;
+              color: white;
+              font-size: 20px;
+              position: absolute;
+              margin-top: 50px;
+              text-align: center;
+              &:hover{
+                transition: 0.6s ease-in-out;
+                opacity: 0;
+              }
+              
+  
+            }
             img {
               width: 100%;
               height: 150px;
               object-fit: contain;
+            
+            
             }
           }
 
@@ -381,4 +402,28 @@ bottom: 1.35em;
       color: red;
     }
   }
+  
+
+
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+
+
 }
