--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #f8f8f8;
+  background-color: #faf9f6;
 }
 
 .app {
@@ -8,6 +8,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #faf9f6;
 }
 
 .main {
@@ -259,7 +260,7 @@ body {
         width: 100%;
         min-height: 48px;
         margin-bottom: 12px;
-        background-color: white;
+        background-color: #ffffff;
 
         .search-icon {
           margin-left: 6px;
@@ -325,29 +326,23 @@ body {
             margin-bottom: 12px;
             opacity: 1;
             display: block;
-           
-       
-    
+
             .Show_Details {
-              background-color: #04AA6D;
+              background-color: #04aa6d;
               color: white;
               font-size: 20px;
               position: absolute;
               margin-top: 50px;
               text-align: center;
-              &:hover{
+              &:hover {
                 transition: 0.6s ease-in-out;
                 opacity: 0;
               }
-              
-  
             }
             img {
               width: 100%;
               height: 150px;
               object-fit: contain;
-            
-            
             }
           }
 
@@ -364,7 +359,7 @@ body {
 
 .Footer {
   width: 100%;
-  background-color: #f5e505;
+  background-color: #fdd201;
   color: #000;
   text-align: center;
   padding: 20px;
@@ -382,7 +377,7 @@ body {
 .button {
   position: relative;
   width: 100%;
-bottom: 1.35em;
+  bottom: 1.35em;
   .add-cart {
     border: 2px solid #006149;
     background-color: #006149;
@@ -402,11 +397,4 @@ bottom: 1.35em;
       color: red;
     }
   }
-  
-
-
-
-  
-
-
 }
