--- a/src/styles/Productviewpg.scss
+++ b/src/styles/Productviewpg.scss
@@ -1,17 +1,19 @@
 .frame-child{
   position: absolute;
-  top: 138px;
-  left: 330px;
-  width: 561px;
-  height: 394px;
+  top: 235px;
+  left: 270px;
+  width: 600px;
+  height: 430px;
+  border: 4px solid grey;
+  padding: 20px;
 }
 
 .image-1-icon, .image-2-icon, .image-3-icon, .image-4-icon {
-  object-fit: cover;
-  transform: rotate(45eg);
-  height: 103px;
+
+  height: 110px;
   left: 500px;
-  background-color: aqua;
+  border: 4px solid grey;
+  padding: 5px;
 }
 
 .image-icons-container{
@@ -28,7 +30,7 @@
 
   .product-title {
     position: absolute;
-    top: 185px;
+    top: 240px;
     left: 1000px;
     font-family: 'DM Sans', sans-serif;
     font-family: 'Glegoo', serif;
@@ -38,7 +40,7 @@
 
   .price{
     position: absolute;
-    top: 280px;
+    top: 330px;
     left: 1000px;
     font-weight: 700;
     font-size: 30px;
@@ -48,7 +50,7 @@
 
   .available{
     position: absolute;
-    top: 325px;
+    top: 380px;
     left: 1000px;
     font-size: var(--font-size-xl);
     color: #1cb93e;
@@ -57,7 +59,7 @@
   .warning {
     position: absolute;
     left: 1000px;
-    top: 400px;
+    top: 450px;
     width: 300px;
   }
   
@@ -79,7 +81,7 @@
 }
 .SubmitButton-div{
   padding-left: 760px;
-  padding-top: 387px;
+  padding-top: 400px;
  
 }
 .RemoveButton-div{
@@ -100,6 +102,7 @@
   
  
 }
+
 
 
 
