--- a/src/styles/HomePageStyles.scss
+++ b/src/styles/HomePageStyles.scss
@@ -33,7 +33,8 @@
   .main-image {
     height: 500px;
     object-fit: cover;
-    border-radius: 5px;
+    border: 5px solid grey;
+    border-radius: 10px;
     width: 100%;
   }
 }
