--- a/src/styles/Productviewpg.scss
+++ b/src/styles/Productviewpg.scss
@@ -1,4 +1,4 @@
-.frame-child{
+.frame-child {
   position: absolute;
   top: 235px;
   left: 270px;
@@ -8,7 +8,10 @@
   padding: 20px;
 }
 
-.image-1-icon, .image-2-icon, .image-3-icon, .image-4-icon {
+.image-1-icon,
+.image-2-icon,
+.image-3-icon,
+.image-4-icon {
 
   height: 110px;
   left: 500px;
@@ -16,80 +19,81 @@
   padding: 5px;
 }
 
-.image-icons-container{
+.image-icons-container {
   display: flex;
   justify-content: space-between;
   position: absolute;
   top: 280px;
   left: 1px;
-   width: 200px;
+  width: 200px;
   height: 103px;
   transform: rotate(90deg);
-  
+
 }
 
-  .product-title {
-    position: absolute;
-    top: 240px;
-    left: 1000px;
-    font-family: 'DM Sans', sans-serif;
-    font-family: 'Glegoo', serif;
-    font-size: 35px;
-    font-weight: 800;
-  }
-
-  .price{
-    position: absolute;
-    top: 330px;
-    left: 1000px;
-    font-weight: 700;
-    font-size: 30px;
-
-
-  }
-
-  .available{
-    position: absolute;
-    top: 380px;
-    left: 1000px;
-    font-size: var(--font-size-xl);
-    color: #1cb93e;
-  }
-
-  .warning {
-    position: absolute;
-    left: 1000px;
-    top: 450px;
-    width: 300px;
-  }
-  
-  .AddTocart {
-    border: 2px solid rgb(245, 109, 19);
-    background-color: rgb(245, 109, 19);
-    color: white;
-    outline: 0;
-    height: 70px;
-    width: 100%;
-    font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    &:hover {
-      background-color: white;
-      color: red;
+.product-title {
+  position: absolute;
+  top: 240px;
+  left: 1000px;
+  font-family: 'DM Sans', sans-serif;
+  font-family: 'Glegoo', serif;
+  font-size: 35px;
+  font-weight: 800;
 }
+
+.price {
+  position: absolute;
+  top: 330px;
+  left: 1000px;
+  font-weight: 700;
+  font-size: 30px;
 }
-.SubmitButton-div{
+
+.available {
+  position: absolute;
+  top: 380px;
+  left: 1000px;
+  font-size: var(--font-size-xl);
+  color: #1cb93e;
+}
+
+.warning {
+  position: absolute;
+  left: 1000px;
+  top: 450px;
+  width: 300px;
+}
+
+.AddTocart {
+  border: 2px solid rgb(245, 109, 19);
+  background-color: rgb(245, 109, 19);
+  color: white;
+  outline: 0;
+  height: 70px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    background-color: white;
+    color: red;
+  }
+}
+
+.SubmitButton-div {
   padding-left: 760px;
   padding-top: 400px;
- 
+
 }
-.RemoveButton-div{
+
+.RemoveButton-div {
   padding-left: 1170px;
   padding-top: 15px;
 }
 
-.RemoveButton{
+.RemoveButton {
   color: black;
   outline: 0;
   height: 45px;
@@ -98,11 +102,4 @@
   text-align: center;
   background-color: Transparent;
   border: none;
- 
-  
- 
 }
-
-
-
-
