--- a/src/styles/HomePageStyles.scss
+++ b/src/styles/HomePageStyles.scss
@@ -38,7 +38,7 @@
   .main-image {
     height: 500px;
     object-fit: cover;
-    border: 5px solid grey;
+    border: 5px solid #006149;
     border-radius: 10px;
     width: 100%;
   }
