--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -33,8 +33,8 @@
   }
 
   .login-btn {
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid #006149;
+    background-color: #006149;
     color: white;
     outline: 0;
     height: 45px;
