--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,7 +1,11 @@
 .login-container {
   padding: 8px 12px;
   margin-bottom: 2rem;
+  margin-top: 4rem;
 
+  .login-header{
+    text-align: center;
+  }
   h2 {
     font-size: 24px;
     line-height: 30px;
