--- a/src/styles/admin-nav.scss
+++ b/src/styles/admin-nav.scss
@@ -116,3 +116,9 @@
 .margin-container{
   margin-bottom: 5em;
 }
+.change-colour{
+  &:hover {
+    background-color: white;
+    color: white;
+  }
+}
